fix: border style on mobile

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -966,10 +966,6 @@ input:focus {
   width: 1.5rem;
 }
 
-.w-12 {
-  width: 3rem;
-}
-
 .w-20 {
   width: 5rem;
 }
@@ -980,6 +976,10 @@ input:focus {
 
 .w-14 {
   width: 3.5rem;
+}
+
+.w-12 {
+  width: 3rem;
 }
 
 .max-w-xl {
@@ -1853,6 +1853,10 @@ input:focus {
   border-bottom-width: 0px;
 }
 
+.focus\:border-0:focus {
+  border-width: 0px;
+}
+
 .focus\:border-none:focus {
   border-style: none;
 }
@@ -1909,24 +1913,6 @@ input:focus {
 
 .focus\:ring-indigo\/30:focus {
   --tw-ring-color: rgb(62 59 201 / 0.3);
-}
-
-.focus-visible\:outline-indigo:focus-visible {
-  outline-color: #3E3BC9;
-}
-
-.focus-visible\:ring-2:focus-visible {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.focus-visible\:ring-cornflower\/50:focus-visible {
-  --tw-ring-color: rgb(114 117 240 / 0.5);
-}
-
-.focus-visible\:ring-offset-4:focus-visible {
-  --tw-ring-offset-width: 4px;
 }
 
 .disabled\:cursor-not-allowed:disabled {
@@ -2175,10 +2161,6 @@ input:focus {
 }
 
 @media (min-width: 1024px) {
-  .lg\:flex {
-    display: flex;
-  }
-
   .lg\:max-w-3xl {
     max-width: 48rem;
   }
@@ -2187,6 +2169,10 @@ input:focus {
     --tw-scale-x: 1.05;
     --tw-scale-y: 1.05;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .lg\:focus\:border-0:focus {
+    border-width: 0px;
   }
 
   .lg\:focus\:shadow-lg:focus {
